# claweval

./: .gitignore  Cargo.toml  README.md
examples/: fake_agent.py  http_agent.py
matrix/: .env.example  README.md  docker-compose.yml  matrix.json  matrix_runner.py  report_aggregator.py
matrix/adapter/: adapter.py
matrix/agents/_template/: Dockerfile  config.json
matrix/agents/hermes/: Dockerfile  config.json  entrypoint.sh  hermes_run.sh
matrix/agents/ironclaw/: Dockerfile  config.json  ironclaw.env  ironclaw_run.sh  settings.json
matrix/mock_services/: oracle_sink.py
matrix/suites/: matrix_async_simulated.json  matrix_basic.json  matrix_browser_install.json  matrix_code_gen.json  matrix_data_processing.json  matrix_debugging.json  matrix_exploration.json  matrix_longhorizon_reliability.json  matrix_memory.json  matrix_openclaw_browser.json  matrix_openclaw_scheduler.json  matrix_openclaw_skills.json  matrix_openclaw_webfetch.json  matrix_pipeline.json  matrix_reasoning.json  matrix_robustness.json  matrix_security.json  matrix_structured.json  matrix_sysadmin.json  matrix_tools_grounding.json
reports/harness/: harness_oracle_latest.json
src/: checks.rs  jsonschema.rs  judge.rs  main.rs  printer.rs  report.rs  runner.rs  services.rs  spec.rs  sse_client.rs  stats.rs  types.rs  util.rs  vars.rs  webhook_listener.rs
src/backend/: command.rs  http.rs  mod.rs  openai.rs  openclaw.rs
suites/: command_fake.json  harness_oracle.json  http_example.json  openclaw_basic.json  openclaw_memory.json  openclaw_reasoning.json  openclaw_tools.json
(+14 files in other folders)
