[package]
name = "claweval"
version = "0.1.0"
edition = "2021"
description = "ClawEval: composable evaluation framework for long-running, tool-using agents (OpenClaw-compatible)"
license = "MIT"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
glob = "0.3"
rayon = "1"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
ureq = { version = "2", features = ["json"] }
uuid = { version = "1", features = ["v4"] }

[profile.release]
strip = true
lto = true
codegen-units = 1
